--- a/os3/conf/default.conf
+++ b/os3/conf/default.conf
@@ -1,4 +1,15 @@
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
 
+upstream api {
+  server backend:8080;
+}
+
+upstream websocket {
+  server backend:8080;
+}
 
 server {
     listen 8080;
