--- a/os3/conf/default.conf
+++ b/os3/conf/default.conf
@@ -4,11 +4,11 @@ map $http_upgrade $connection_upgrade {
 }
 
 upstream api {
-  server backend:8080;
+  server backend.tasks.svc:8080;
 }
 
 upstream websocket {
-  server backend:8080;
+  server backend.tasks.svc:8080;
 }
 
 server {
