--- a/os3/conf/default.conf
+++ b/os3/conf/default.conf
@@ -4,18 +4,20 @@ map $http_upgrade $connection_upgrade {
 }
 
 upstream api {
-  server backend.tasks.svc:8080;
+  server backend:8080;
 }
 
 upstream websocket {
-  server backend.tasks.svc:8080;
+  server backend:8080;
 }
 
 server {
-    listen 8080;
+    listen       8080 default_server;
+    listen       [::]:8080 default_server;
+    server_name  _;
 
     location / {
-        root   /usr/share/nginx/html;
+        root  /usr/share/nginx/html;
         index  index.html index.htm;
         expires -1;
         add_header Pragma "no-cache";
@@ -41,6 +43,4 @@ server {
         proxy_set_header Connection $connection_upgrade;
     }
 }
-
-
 
