--- a/openshift/conf/default.conf
+++ b/openshift/conf/default.conf
@@ -1,21 +1,38 @@
-server {
-    listen       8080 default_server;
-    listen       [::]:8080 default_server;
-    server_name  _;
+
+http {
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                          '$status $body_bytes_sent "$http_referer" '
+                          '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile            on;
+    tcp_nopush          on;
+    tcp_nodelay         on;
+    keepalive_timeout   65;
+    types_hash_max_size 2048;
 
 
     map $http_upgrade $connection_upgrade {
-        default upgrade;
-        '' close;
+      default upgrade;
+      '' close;
     }
-    
-    location / {
-        root  /opt/app-root/src;
-        index  index.html index.htm;
-        expires -1;
-        add_header Pragma "no-cache";
-        add_header Cache-Control "no-store, no-cache, must-revalidate, post-check=0, pre-check=0";
-        try_files $uri$args $uri$args/ $uri $uri/ /index.html =404;
+
+
+    server {
+      listen       8080 default_server;
+      listen       [::]:8080 default_server;
+      server_name  _;
+
+      location / {
+          root  /opt/app-root/src;
+          index  index.html index.htm;
+          expires -1;
+          add_header Pragma "no-cache";
+          add_header Cache-Control "no-store, no-cache, must-revalidate, post-check=0, pre-check=0";
+          try_files $uri$args $uri$args/ $uri $uri/ /index.html =404;
+      }
+
     }
 
 }
